Atualizações do projeto

--- a/Views/People/Create.cshtml
+++ b/Views/People/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CadastroDePessoas.Models.People
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h2>Adicionar Pessoa</h2>
